--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2845,7 +2845,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1736826911597}\n"
+      "Server Time: {'serverTime': 1736835941148}\n"
      ]
     }
    ],
@@ -2865,21 +2865,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'logging' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 49\u001b[0m, in \u001b[0;36mBinanceAPI._send_request\u001b[0;34m(self, method, endpoint, params, signed)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid method: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmethod\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 49\u001b[0m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n",
-      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/requests/models.py:1024\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1023\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1024\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[0;31mHTTPError\u001b[0m: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v2/balance?timestamp=1736826926571&signature=37bd4abc729b9491463ff8b8d9d890fd8e2cdee2710b655ed98df83d630ca3db",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get balance information\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m balance \u001b[38;5;241m=\u001b[39m \u001b[43mbinance_api\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_balance\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Print the balance information\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m balance:\n",
-      "Cell \u001b[0;32mIn[1], line 136\u001b[0m, in \u001b[0;36mBinanceAPI.check_balance\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    132\u001b[0m params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    133\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mint\u001b[39m(time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m    134\u001b[0m }\n\u001b[1;32m    135\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msignature\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_generate_signature(params)\n\u001b[0;32m--> 136\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_send_request\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mGET\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendpoint\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[1], line 53\u001b[0m, in \u001b[0;36mBinanceAPI._send_request\u001b[0;34m(self, method, endpoint, params, signed)\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m requests\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mRequestException \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 53\u001b[0m     \u001b[43mlogging\u001b[49m\u001b[38;5;241m.\u001b[39merror(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPI request failed: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'logging' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '3048.81032617', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '3078.96005077', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4.25406400', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.92341336', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.03093494', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '5104.28640335', 'crossWalletBalance': '5104.28640335', 'crossUnPnl': '24.03000006', 'availableBalance': '3081.73084967', 'maxWithdrawAmount': '3081.73084967', 'marginAvailable': True, 'updateTime': 1736833683534}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '3080.29284493', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -2894,7 +2883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2906,14 +2895,90 @@
     "symbol = 'SOLUSDT'\n",
     "\n",
     "gpr = binance_api.get_position_risk(symbol=symbol)\n",
-    "if float(gpr[0]['entryPrice']) < float(gpr[0]['entryPrice']):\n",
-    "    prev_action = 'Long'\n",
-    "elif float(gpr[0]['entryPrice']) > float(gpr[0]['entryPrice']):\n",
-    "    prev_action = 'Short'\n",
+    "if gpr:\n",
+    "    if float(gpr[0]['entryPrice']) < float(gpr[0]['breakEvenPrice']):\n",
+    "        prev_action = 'Long'\n",
+    "    elif float(gpr[0]['entryPrice']) > float(gpr[0]['breakEvenPrice']):\n",
+    "        prev_action = 'Short'\n",
     "else:\n",
-    "    prev_action = None\n",
-    "\n",
-    "prev_action   "
+    "    prev_action = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Long\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prev_action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gpr = binance_api.get_position_risk(symbol='XRPUSDT')\n",
+    "gpr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not gpr:\n",
+    "    print('empty')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mgpr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mentryPrice\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "gpr[0]['entryPrice']"
    ]
   },
   {
