--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -3699,9 +3699,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (my-venv)",
    "language": "python",
-   "name": "python3"
+   "name": "my-venv"
   },
   "language_info": {
    "codemirror_mode": {
