--- a/03X_ST_IC/01_dev/03X_basic_ST_IC_back_test modified.ipynb
+++ b/03X_ST_IC/01_dev/03X_basic_ST_IC_back_test modified.ipynb
@@ -149,6 +149,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add MACD\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def compute_macd_with_supertrend(supertrend_df, fast_period=12, slow_period=26, signal_period=9):\n",
+    "    \"\"\"\n",
+    "    Compute MACD and Signal Line and join them with the original supertrend DataFrame.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - supertrend_df (DataFrame): The input DataFrame with 'highprice', 'lowprice', and 'closeprice' columns.\n",
+    "    - fast_period (int): Period for the fast EMA (12-period). Default is 12.\n",
+    "    - slow_period (int): Period for the slow EMA (26-period). Default is 26.\n",
+    "    - signal_period (int): Period for the Signal line (9-period). Default is 9.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - DataFrame: A DataFrame that combines the original supertrend DataFrame with the computed MACD components.\n",
+    "    \"\"\"\n",
+    "    # Compute MACD Line (fast EMA - slow EMA)\n",
+    "    supertrend_df['macd_line'] = supertrend_df['closeprice'].ewm(span=fast_period, adjust=False).mean() - supertrend_df['closeprice'].ewm(span=slow_period, adjust=False).mean()\n",
+    "    \n",
+    "    # Compute Signal Line (9-period EMA of the MACD line)\n",
+    "    supertrend_df['signal_line'] = supertrend_df['macd_line'].ewm(span=signal_period, adjust=False).mean()\n",
+    "    \n",
+    "    # Compute Histogram (MACD Line - Signal Line)\n",
+    "    supertrend_df['histogram'] = supertrend_df['macd_line'] - supertrend_df['signal_line']\n",
+    "    \n",
+    "    # Return the DataFrame with MACD, Signal, and Histogram columns\n",
+    "    return supertrend_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
