--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2847,7 +2847,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1736835941148}\n"
+      "Server Time: {'serverTime': 1737358797333}\n"
      ]
     }
    ],
@@ -2881,6 +2881,16 @@
     "# Print the balance information\n",
     "if balance:\n",
     "    print(\"Balance Info:\", balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the available balance for USDT\n",
+    "usdt_balance = next((float(item['availableBalance']) for item in balance if item['asset'] == 'USDT'), None)"
    ]
   },
   {
@@ -3757,9 +3767,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (my-venv)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "my-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
