--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2690,6 +2690,7 @@
     "import urllib.parse\n",
     "import hmac\n",
     "import time\n",
+    "import logging\n",
     "\n",
     "class BinanceAPI:\n",
     "    def __init__(self, api_key: str, api_secret: str, testnet: bool = False):\n",
@@ -2760,6 +2761,8 @@
     "        quantity: float,\n",
     "        price: float = None,\n",
     "        reduce_only: bool = False,\n",
+    "        time_in_force: str = None,  # Add time_in_force parameter here\n",
+    "        stop_price: float = None  # Add stop_price for Stop Loss orders\n",
     "    ) -> dict:\n",
     "        \"\"\"Create a new order\"\"\"\n",
     "        params = {\n",
@@ -2773,17 +2776,26 @@
     "        if price:\n",
     "            params[\"price\"] = price\n",
     "\n",
+    "        if stop_price:  # Include stop_price for STOP_MARKET or TAKE_PROFIT_MARKET orders\n",
+    "            params[\"stopPrice\"] = stop_price\n",
+    "\n",
+    "        if order_type == \"LIMIT\" and time_in_force:  # Only add time_in_force for LIMIT orders\n",
+    "            params[\"timeInForce\"] = time_in_force\n",
+    "\n",
+    "        # Check if the order type is either STOP_MARKET or TAKE_PROFIT_MARKET\n",
+    "        if order_type in ['STOP_MARKET', 'TAKE_PROFIT_MARKET']:\n",
+    "            # If order type is STOP_MARKET or TAKE_PROFIT_MARKET, the stop price is mandatory\n",
+    "            params[\"stopPrice\"] = stop_price\n",
+    "\n",
     "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
-    "    \n",
+    "\n",
     "    def close_all_position(self):\n",
     "        \"\"\"Close all active positions on the account\"\"\"\n",
-    "        # Get all active positions\n",
     "        positions = self.get_position_risk()\n",
     "        if positions is None:\n",
     "            logging.error(\"Failed to retrieve position information.\")\n",
     "            return\n",
     "\n",
-    "        # Iterate through each position and close it\n",
     "        for position in positions:\n",
     "            symbol = position['symbol']\n",
     "            position_amt = float(position['positionAmt'])\n",
@@ -2792,7 +2804,6 @@
     "                side = 'SELL' if position_amt > 0 else 'BUY'\n",
     "                quantity = abs(position_amt)\n",
     "\n",
-    "                # Create a market order to close the position\n",
     "                response = self.create_order(\n",
     "                    symbol=symbol,\n",
     "                    side=side,\n",
@@ -2820,12 +2831,71 @@
     "            \"timestamp\": int(time.time() * 1000)\n",
     "        }\n",
     "        params[\"signature\"] = self._generate_signature(params)\n",
-    "        return self._send_request(\"GET\", endpoint, params=params)"
+    "        return self._send_request(\"GET\", endpoint, params=params)\n",
+    "    \n",
+    "    def set_tp_and_sl(self, symbol, side, quantity, market_price, tp_percentage, sl_percentage):\n",
+    "        \"\"\"\n",
+    "        Set Take Profit (TP) and Stop Loss (SL) orders for an already executed market order.\n",
+    "\n",
+    "        Args:\n",
+    "            symbol: The trading pair symbol (e.g., \"BTCUSDT\").\n",
+    "            side: \"BUY\" or \"SELL\".\n",
+    "            quantity: The amount of the asset to trade.\n",
+    "            market_price: The market price at which the order was executed.\n",
+    "            tp_percentage: The take profit percentage (e.g., 5 for +5%).\n",
+    "            sl_percentage: The stop loss percentage (e.g., -3 for -3%).\n",
+    "\n",
+    "        Returns:\n",
+    "            dict: Contains information about the placed TP and SL orders.\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            # Calculate TP and SL prices\n",
+    "            if side == \"BUY\":\n",
+    "                tp_price = round(market_price * (1 + tp_percentage / 100), 3)\n",
+    "                sl_price = round(market_price * (1 - sl_percentage / 100), 3)\n",
+    "            elif side == \"SELL\":\n",
+    "                tp_price = round(market_price * (1 - tp_percentage / 100), 3)\n",
+    "                sl_price = round(market_price * (1 + sl_percentage / 100), 3)\n",
+    "            else:\n",
+    "                raise ValueError(\"Invalid side. Must be 'BUY' or 'SELL'.\")\n",
+    "\n",
+    "            logging.info(f\"Take Profit price: {tp_price}, Stop Loss price: {sl_price}\")\n",
+    "\n",
+    "            # Place Take Profit (TP) order\n",
+    "            tp_order = self.create_order(\n",
+    "                symbol=symbol,\n",
+    "                side=\"SELL\" if side == \"BUY\" else \"BUY\",  # Reverse side for TP\n",
+    "                order_type=\"LIMIT\",  # Assuming LIMIT for TP orders\n",
+    "                quantity=quantity,\n",
+    "                price=tp_price,\n",
+    "                time_in_force=\"GTC\"  # Good till canceled\n",
+    "            )\n",
+    "            logging.info(f\"Take Profit order placed: {tp_order}\")\n",
+    "\n",
+    "            # Place Stop Loss (SL) order\n",
+    "            sl_order = self.create_order(\n",
+    "                symbol=symbol,\n",
+    "                side=\"SELL\" if side == \"BUY\" else \"BUY\",  # Reverse side for SL\n",
+    "                order_type=\"STOP_MARKET\",  # STOP_MARKET for SL orders\n",
+    "                quantity=quantity,\n",
+    "                stop_price=sl_price,  # For stop loss, use 'stop_price'\n",
+    "                time_in_force=\"GTC\"  # Good till canceled\n",
+    "            )\n",
+    "            logging.info(f\"Stop Loss order placed: {sl_order}\")\n",
+    "\n",
+    "            return {\n",
+    "                \"tp_order\": tp_order,\n",
+    "                \"sl_order\": sl_order\n",
+    "            }\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Error placing TP/SL orders: {e}\")\n",
+    "            return {\"error\": str(e)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2839,7 +2909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2917,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1737358797333}\n"
+      "Server Time: {'serverTime': 1737690773675}\n"
      ]
     }
    ],
@@ -2863,14 +2933,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '3048.81032617', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '3078.96005077', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '4.25406400', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.92341336', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.03093494', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '5104.28640335', 'crossWalletBalance': '5104.28640335', 'crossUnPnl': '24.03000006', 'availableBalance': '3081.73084967', 'maxWithdrawAmount': '3081.73084967', 'marginAvailable': True, 'updateTime': 1736833683534}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '3080.29284493', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24472.37230241', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24702.02146931', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '34.46647053', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '7.11888421', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.22658441', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '24809.23247993', 'crossWalletBalance': '24809.23247993', 'crossUnPnl': '0.00000000', 'availableBalance': '24724.25111791', 'maxWithdrawAmount': '24724.25111791', 'marginAvailable': True, 'updateTime': 1737690715954}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24721.75545081', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -2881,6 +2951,51 @@
     "# Print the balance information\n",
     "if balance:\n",
     "    print(\"Balance Info:\", balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'symbol': 'SUIUSDT', 'positionSide': 'BOTH', 'positionAmt': '-5.0', 'entryPrice': '4.2246', 'breakEvenPrice': '4.2224877', 'markPrice': '4.22930000', 'unRealizedProfit': '-0.02350000', 'liquidationPrice': '4912.36726234', 'isolatedMargin': '0', 'notional': '-21.14650000', 'marginAsset': 'USDT', 'isolatedWallet': '0', 'initialMargin': '58.87350000', 'maintMargin': '0.21146500', 'positionInitialMargin': '21.14650000', 'openOrderInitialMargin': '37.72700000', 'adl': 1, 'bidNotional': '80.02000000', 'askNotional': '0', 'updateTime': 1737691544783}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gpr = binance_api.get_position_risk(symbol=\"SUIUSDT\")\n",
+    "print(gpr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hasattr(binance_api, \"set_tp_and_sl\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check Short and TP SL\n",
+    "binance_api.create_order_with_tp_sl(symbol=\"SUIUSDT\", \"BUY\", \"MARKET\", \"LIMIT\",5, 3.5, 5)"
    ]
   },
   {
