--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2990,12 +2990,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'symbol': 'SOLUSDT', 'positionSide': 'BOTH', 'positionAmt': '38', 'entryPrice': '262.8', 'breakEvenPrice': '262.9314', 'markPrice': '261.50000000', 'unRealizedProfit': '-49.40000000', 'liquidationPrice': '0', 'isolatedMargin': '0', 'notional': '9937', 'marginAsset': 'USDT', 'isolatedWallet': '0', 'initialMargin': '9937', 'maintMargin': '49.68500000', 'positionInitialMargin': '9937', 'openOrderInitialMargin': '0', 'adl': 1, 'bidNotional': '0', 'askNotional': '0', 'updateTime': 1737700626070}]\n",
+      "Current SOLUSDT ROI: -0.49467275494673185\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check Short and TP SL\n",
-    "binance_api.create_order_with_tp_sl(symbol=\"SUIUSDT\", \"BUY\", \"MARKET\", \"LIMIT\",5, 3.5, 5)"
+    "symbol = \"SOLUSDT\"\n",
+    "\n",
+    "gpr = binance_api.get_position_risk(symbol=symbol)\n",
+    "print(gpr)\n",
+    "\n",
+    "if gpr:\n",
+    "    # Extract entry price and mark price from the `gpr` response\n",
+    "    entry_price = float(gpr[0]['entryPrice'])\n",
+    "    mark_price = float(gpr[0]['markPrice'])\n",
+    "    \n",
+    "    position_type = None\n",
+    "\n",
+    "    if float(gpr[0]['entryPrice']) < float(gpr[0]['breakEvenPrice']):\n",
+    "        position_type = 'Long'\n",
+    "    elif float(gpr[0]['entryPrice']) > float(gpr[0]['breakEvenPrice']):\n",
+    "        position_type = 'Short'\n",
+    "\n",
+    "    if mark_price != 0 and entry_price != 0:\n",
+    "        if position_type == 'Long':\n",
+    "            roi = (mark_price - entry_price) / entry_price * 100\n",
+    "        elif position_type == 'Short':\n",
+    "            roi = (entry_price - mark_price) / entry_price * 100\n",
+    "        print(f'Current {symbol} ROI: {roi}')\n",
+    "    else:\n",
+    "        roi = 0\n",
+    "        print(f'Current {symbol} ROI: {roi}')"
    ]
   },
   {
