--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2831,66 +2831,7 @@
     "            \"timestamp\": int(time.time() * 1000)\n",
     "        }\n",
     "        params[\"signature\"] = self._generate_signature(params)\n",
-    "        return self._send_request(\"GET\", endpoint, params=params)\n",
-    "    \n",
-    "    def set_tp_and_sl(self, symbol, side, quantity, market_price, tp_percentage, sl_percentage):\n",
-    "        \"\"\"\n",
-    "        Set Take Profit (TP) and Stop Loss (SL) orders for an already executed market order.\n",
-    "\n",
-    "        Args:\n",
-    "            symbol: The trading pair symbol (e.g., \"BTCUSDT\").\n",
-    "            side: \"BUY\" or \"SELL\".\n",
-    "            quantity: The amount of the asset to trade.\n",
-    "            market_price: The market price at which the order was executed.\n",
-    "            tp_percentage: The take profit percentage (e.g., 5 for +5%).\n",
-    "            sl_percentage: The stop loss percentage (e.g., -3 for -3%).\n",
-    "\n",
-    "        Returns:\n",
-    "            dict: Contains information about the placed TP and SL orders.\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            # Calculate TP and SL prices\n",
-    "            if side == \"BUY\":\n",
-    "                tp_price = round(market_price * (1 + tp_percentage / 100), 3)\n",
-    "                sl_price = round(market_price * (1 - sl_percentage / 100), 3)\n",
-    "            elif side == \"SELL\":\n",
-    "                tp_price = round(market_price * (1 - tp_percentage / 100), 3)\n",
-    "                sl_price = round(market_price * (1 + sl_percentage / 100), 3)\n",
-    "            else:\n",
-    "                raise ValueError(\"Invalid side. Must be 'BUY' or 'SELL'.\")\n",
-    "\n",
-    "            logging.info(f\"Take Profit price: {tp_price}, Stop Loss price: {sl_price}\")\n",
-    "\n",
-    "            # Place Take Profit (TP) order\n",
-    "            tp_order = self.create_order(\n",
-    "                symbol=symbol,\n",
-    "                side=\"SELL\" if side == \"BUY\" else \"BUY\",  # Reverse side for TP\n",
-    "                order_type=\"LIMIT\",  # Assuming LIMIT for TP orders\n",
-    "                quantity=quantity,\n",
-    "                price=tp_price,\n",
-    "                time_in_force=\"GTC\"  # Good till canceled\n",
-    "            )\n",
-    "            logging.info(f\"Take Profit order placed: {tp_order}\")\n",
-    "\n",
-    "            # Place Stop Loss (SL) order\n",
-    "            sl_order = self.create_order(\n",
-    "                symbol=symbol,\n",
-    "                side=\"SELL\" if side == \"BUY\" else \"BUY\",  # Reverse side for SL\n",
-    "                order_type=\"STOP_MARKET\",  # STOP_MARKET for SL orders\n",
-    "                quantity=quantity,\n",
-    "                stop_price=sl_price,  # For stop loss, use 'stop_price'\n",
-    "                time_in_force=\"GTC\"  # Good till canceled\n",
-    "            )\n",
-    "            logging.info(f\"Stop Loss order placed: {sl_order}\")\n",
-    "\n",
-    "            return {\n",
-    "                \"tp_order\": tp_order,\n",
-    "                \"sl_order\": sl_order\n",
-    "            }\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            logging.error(f\"Error placing TP/SL orders: {e}\")\n",
-    "            return {\"error\": str(e)}"
+    "        return self._send_request(\"GET\", endpoint, params=params)\n"
    ]
   },
   {
