--- a/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
+++ b/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
@@ -6904,12 +6904,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select data and process df\n",
-    "df = load_and_clean_data('SOLUSDT_30m.csv')\n",
+    "df = load_and_clean_data('SUIUSDT_30m.csv')\n",
     "supertrend_df = calculate_supertrend(df)\n",
     "supertrend_1_df = calculate_supertrend(supertrend_df, length = 12, multiplier = 3.0)\n",
     "supertrend_2_df = calculate_supertrend(supertrend_1_df, length = 11, multiplier = 2.0)\n",
@@ -7605,7 +7605,7 @@
     "        df_capped = pnl_capping(df_backtest_recap_separated, profit_cap=profit_cap, loss_cap=loss_cap)\n",
     "        \n",
     "        # Calculate metrics\n",
-    "        positions_df = get_positions(df_capped,position_selection=-1) # 1 for long, -1 for short\n",
+    "        positions_df = get_positions(df_capped,position_selection=1) # 1 for long, -1 for short\n",
     "        metrics_df, _ = calculate_metrics(positions_df)\n",
     "        \n",
     "        # Extract metrics\n",
@@ -7644,7 +7644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -7653,7 +7653,7 @@
      "text": [
       "\n",
       "Best Combination for Sharpe Ratio:\n",
-      "Profit Cap: 4.100000000000003, Loss Cap: -1.0, Sharpe Ratio: 3.091593320254958, Cumulative PnL: 23.414255030004764, Win Rate (%): 34.0, Profit/Loss Ratio: 4.100000000000003\n"
+      "Profit Cap: 4.5000000000000036, Loss Cap: -2.100000000000001, Sharpe Ratio: 0.9638340992833716, Cumulative PnL: 10.179614222204487, Win Rate (%): 39.62264150943396, Profit/Loss Ratio: 2.1428571428571437\n"
      ]
     }
    ],
@@ -7669,7 +7669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -7678,7 +7678,7 @@
      "text": [
       "\n",
       "Best Combination for Win Rate:\n",
-      "Profit Cap: 1.0, Loss Cap: -2.6000000000000014, Sharpe Ratio: -1.3479668825737001, Cumulative PnL: -5.600558062784235, Win Rate (%): 68.0, Profit/Loss Ratio: 0.3846153846153844\n"
+      "Profit Cap: 1.0, Loss Cap: -3.9000000000000026, Sharpe Ratio: -5.072162890900111, Cumulative PnL: -30.752208550691723, Win Rate (%): 58.490566037735846, Profit/Loss Ratio: 0.2564102564102562\n"
      ]
     }
    ],
@@ -7693,7 +7693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -7702,7 +7702,7 @@
      "text": [
       "\n",
       "Best Combination for Profit/Loss Ratio:\n",
-      "Profit Cap: 4.900000000000004, Loss Cap: -1.0, Sharpe Ratio: 1.1289718432110474, Cumulative PnL: 9.509123742280295, Win Rate (%): 30.0, Profit/Loss Ratio: 4.900000000000004\n"
+      "Profit Cap: 5.0000000000000036, Loss Cap: -1.0, Sharpe Ratio: -0.25377376161726145, Cumulative PnL: -1.0293811455251116, Win Rate (%): 20.754716981132077, Profit/Loss Ratio: 5.0000000000000036\n"
      ]
     }
    ],
@@ -7717,7 +7717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -7726,7 +7726,7 @@
      "text": [
       "\n",
       "Best Combination for Winrate & Sharpe Ratio:\n",
-      "Profit Cap: 1.5000000000000004, Loss Cap: -2.100000000000001, Sharpe Ratio: 1.3520369531424221, Cumulative PnL: 7.952319472331595, Win Rate (%): 62.0, Profit/Loss Ratio: 0.7142857142857142\n"
+      "Profit Cap: 1.0, Loss Cap: -3.200000000000002, Sharpe Ratio: -4.557687569566559, Cumulative PnL: -25.118409355987207, Win Rate (%): 58.490566037735846, Profit/Loss Ratio: 0.31249999999999983\n"
      ]
     }
    ],
@@ -7737,6 +7737,247 @@
     "print(f\"Profit Cap: {best_winrate_sharpe_ratio['Profit Cap']}, Loss Cap: {best_winrate_sharpe_ratio['Loss Cap']}, \"\n",
     "      f\"Sharpe Ratio: {best_winrate_sharpe_ratio['Sharpe Ratio']}, Cumulative PnL: {best_winrate_sharpe_ratio['Cumulative PnL']}, \"\n",
     "      f\"Win Rate (%): {best_winrate_sharpe_ratio['Win Rate (%)']}, Profit/Loss Ratio: {best_winrate_sharpe_ratio['Profit/Loss Ratio']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Profit Cap</th>\n",
+       "      <th>Loss Cap</th>\n",
+       "      <th>Sharpe Ratio</th>\n",
+       "      <th>Cumulative PnL</th>\n",
+       "      <th>Win Rate (%)</th>\n",
+       "      <th>Profit/Loss Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.2</td>\n",
+       "      <td>-4.557688</td>\n",
+       "      <td>-25.118409</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.312500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.3</td>\n",
+       "      <td>-4.637211</td>\n",
+       "      <td>-26.018409</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.303030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>-4.713237</td>\n",
+       "      <td>-26.918409</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.294118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>-4.776888</td>\n",
+       "      <td>-27.706693</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>-4.794701</td>\n",
+       "      <td>-28.082781</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.277778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.7</td>\n",
+       "      <td>-4.846897</td>\n",
+       "      <td>-28.782781</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.270270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.8</td>\n",
+       "      <td>-4.857077</td>\n",
+       "      <td>-28.966995</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.263158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.9</td>\n",
+       "      <td>-5.072163</td>\n",
+       "      <td>-30.752209</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.256410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>-5.097479</td>\n",
+       "      <td>-31.152209</td>\n",
+       "      <td>58.490566</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-3.1</td>\n",
+       "      <td>-5.108722</td>\n",
+       "      <td>-28.308409</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.322581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.7</td>\n",
+       "      <td>-5.667589</td>\n",
+       "      <td>-35.228974</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.212766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.8</td>\n",
+       "      <td>-5.670730</td>\n",
+       "      <td>-35.328974</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.208333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.9</td>\n",
+       "      <td>-5.673596</td>\n",
+       "      <td>-35.428974</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.204082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>-5.676188</td>\n",
+       "      <td>-35.528974</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.1</td>\n",
+       "      <td>-5.696088</td>\n",
+       "      <td>-35.510026</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.243902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.3</td>\n",
+       "      <td>-5.710584</td>\n",
+       "      <td>-35.820001</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.232558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-4.2</td>\n",
+       "      <td>-5.710959</td>\n",
+       "      <td>-35.810026</td>\n",
+       "      <td>56.603774</td>\n",
+       "      <td>0.238095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Profit Cap  Loss Cap  Sharpe Ratio  Cumulative PnL  Win Rate (%)  \\\n",
+       "22         1.0      -3.2     -4.557688      -25.118409     58.490566   \n",
+       "23         1.0      -3.3     -4.637211      -26.018409     58.490566   \n",
+       "24         1.0      -3.4     -4.713237      -26.918409     58.490566   \n",
+       "25         1.0      -3.5     -4.776888      -27.706693     58.490566   \n",
+       "26         1.0      -3.6     -4.794701      -28.082781     58.490566   \n",
+       "27         1.0      -3.7     -4.846897      -28.782781     58.490566   \n",
+       "28         1.0      -3.8     -4.857077      -28.966995     58.490566   \n",
+       "29         1.0      -3.9     -5.072163      -30.752209     58.490566   \n",
+       "30         1.0      -4.0     -5.097479      -31.152209     58.490566   \n",
+       "21         1.0      -3.1     -5.108722      -28.308409     56.603774   \n",
+       "37         1.0      -4.7     -5.667589      -35.228974     56.603774   \n",
+       "38         1.0      -4.8     -5.670730      -35.328974     56.603774   \n",
+       "39         1.0      -4.9     -5.673596      -35.428974     56.603774   \n",
+       "40         1.0      -5.0     -5.676188      -35.528974     56.603774   \n",
+       "31         1.0      -4.1     -5.696088      -35.510026     56.603774   \n",
+       "33         1.0      -4.3     -5.710584      -35.820001     56.603774   \n",
+       "32         1.0      -4.2     -5.710959      -35.810026     56.603774   \n",
+       "\n",
+       "    Profit/Loss Ratio  \n",
+       "22           0.312500  \n",
+       "23           0.303030  \n",
+       "24           0.294118  \n",
+       "25           0.285714  \n",
+       "26           0.277778  \n",
+       "27           0.270270  \n",
+       "28           0.263158  \n",
+       "29           0.256410  \n",
+       "30           0.250000  \n",
+       "21           0.322581  \n",
+       "37           0.212766  \n",
+       "38           0.208333  \n",
+       "39           0.204082  \n",
+       "40           0.200000  \n",
+       "31           0.243902  \n",
+       "33           0.232558  \n",
+       "32           0.238095  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df_sorted_sharpe[results_df_sorted_sharpe['Win Rate (%)'] >= 55]"
    ]
   },
   {
