--- a/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
+++ b/03X_ST_IC/01_dev/03X_ST_IC_MACD_EMA.ipynb
@@ -7584,9 +7584,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results DataFrame:\n",
+      "      Profit Cap  Loss Cap  Sharpe Ratio  Cumulative PnL  Win Rate (%)  \\\n",
+      "1271         4.1      -1.0      3.091593       23.414255          34.0   \n",
+      "1230         4.0      -1.0      2.946080       21.945895          34.0   \n",
+      "1107         3.7      -1.0      2.871177       20.516401          34.0   \n",
+      "1189         3.9      -1.0      2.791610       20.447534          34.0   \n",
+      "1312         4.2      -1.0      2.770723       21.448307          32.0   \n",
+      "...          ...       ...           ...             ...           ...   \n",
+      "365          1.8      -4.7     -4.983074      -31.032555          42.0   \n",
+      "366          1.8      -4.8     -4.993516      -31.232555          42.0   \n",
+      "367          1.8      -4.9     -5.003492      -31.432555          42.0   \n",
+      "359          1.8      -4.1     -5.089064      -31.755381          42.0   \n",
+      "360          1.8      -4.2     -5.115205      -32.155381          42.0   \n",
+      "\n",
+      "      Profit/Loss Ratio  \n",
+      "1271           4.100000  \n",
+      "1230           4.000000  \n",
+      "1107           3.700000  \n",
+      "1189           3.900000  \n",
+      "1312           4.200000  \n",
+      "...                 ...  \n",
+      "365            0.382979  \n",
+      "366            0.375000  \n",
+      "367            0.367347  \n",
+      "359            0.439024  \n",
+      "360            0.428571  \n",
+      "\n",
+      "[1681 rows x 6 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
