--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2753,6 +2753,66 @@
     "            params[\"symbol\"] = symbol\n",
     "        return self._send_request(\"GET\", \"/fapi/v3/positionRisk\", params, signed=True)\n",
     "\n",
+    "    def get_symbol_info(self, symbol: str) -> dict:\n",
+    "        \"\"\"Fetch symbol information (e.g., tick size, lot size).\"\"\"\n",
+    "        endpoint = \"/fapi/v1/exchangeInfo\"\n",
+    "        response = self._send_request(\"GET\", endpoint)\n",
+    "        if response and \"symbols\" in response:\n",
+    "            for s in response[\"symbols\"]:\n",
+    "                if s[\"symbol\"] == symbol:\n",
+    "                    return s\n",
+    "        return None\n",
+    "\n",
+    "    def create_take_profit_order(self, symbol: str, side: str, take_profit_price: float) -> dict:\n",
+    "        \"\"\"Create a take-profit order.\"\"\"\n",
+    "        symbol_info = self.get_symbol_info(symbol)\n",
+    "        if not symbol_info:\n",
+    "            logging.error(f\"Failed to fetch symbol info for {symbol}.\")\n",
+    "            return None\n",
+    "\n",
+    "        # Get tick size for stopPrice\n",
+    "        tick_size = float(next(filter(lambda f: f[\"filterType\"] == \"PRICE_FILTER\", symbol_info[\"filters\"]))[\"tickSize\"])\n",
+    "\n",
+    "        # Format stopPrice to adhere to tick size\n",
+    "        formatted_take_profit_price = round(take_profit_price / tick_size) * tick_size\n",
+    "\n",
+    "        order_type = \"TAKE_PROFIT_MARKET\"\n",
+    "        params = {\n",
+    "            \"symbol\": symbol,\n",
+    "            \"side\": \"SELL\" if side == \"BUY\" else \"BUY\",  # Opposite side for TP\n",
+    "            \"type\": order_type,\n",
+    "            \"stopPrice\": formatted_take_profit_price,  # Formatted stop price\n",
+    "            \"closePosition\": True,  # Close the entire position\n",
+    "            \"workingType\": \"MARK_PRICE\",  # Use mark price for stopPrice\n",
+    "            \"priceProtect\": True  # Enable price protection\n",
+    "        }\n",
+    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "\n",
+    "    def create_stop_loss_order(self, symbol: str, side: str, stop_loss_price: float) -> dict:\n",
+    "        \"\"\"Create a stop-loss order.\"\"\"\n",
+    "        symbol_info = self.get_symbol_info(symbol)\n",
+    "        if not symbol_info:\n",
+    "            logging.error(f\"Failed to fetch symbol info for {symbol}.\")\n",
+    "            return None\n",
+    "\n",
+    "        # Get tick size for stopPrice\n",
+    "        tick_size = float(next(filter(lambda f: f[\"filterType\"] == \"PRICE_FILTER\", symbol_info[\"filters\"]))[\"tickSize\"])\n",
+    "\n",
+    "        # Format stopPrice to adhere to tick size\n",
+    "        formatted_stop_loss_price = round(stop_loss_price / tick_size) * tick_size\n",
+    "\n",
+    "        order_type = \"STOP_MARKET\"\n",
+    "        params = {\n",
+    "            \"symbol\": symbol,\n",
+    "            \"side\": \"SELL\" if side == \"BUY\" else \"BUY\",  # Opposite side for SL\n",
+    "            \"type\": order_type,\n",
+    "            \"stopPrice\": formatted_stop_loss_price,  # Formatted stop price\n",
+    "            \"closePosition\": True,  # Close the entire position\n",
+    "            \"workingType\": \"MARK_PRICE\",  # Use mark price for stopPrice\n",
+    "            \"priceProtect\": True  # Enable price protection\n",
+    "        }\n",
+    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "\n",
     "    def create_order(\n",
     "        self,\n",
     "        symbol: str,\n",
@@ -2761,10 +2821,13 @@
     "        quantity: float,\n",
     "        price: float = None,\n",
     "        reduce_only: bool = False,\n",
-    "        time_in_force: str = None,  # Add time_in_force parameter here\n",
-    "        stop_price: float = None  # Add stop_price for Stop Loss orders\n",
+    "        time_in_force: str = None,\n",
+    "        stop_price: float = None,\n",
+    "        take_profit_percentage: float = None,  # New parameter for take-profit percentage\n",
+    "        stop_loss_percentage: float = None    # New parameter for stop-loss percentage\n",
     "    ) -> dict:\n",
-    "        \"\"\"Create a new order\"\"\"\n",
+    "        \"\"\"Create a new order with optional take-profit and stop-loss orders.\"\"\"\n",
+    "        # Create the initial order\n",
     "        params = {\n",
     "            \"symbol\": symbol,\n",
     "            \"side\": side,\n",
@@ -2776,18 +2839,50 @@
     "        if price:\n",
     "            params[\"price\"] = price\n",
     "\n",
-    "        if stop_price:  # Include stop_price for STOP_MARKET or TAKE_PROFIT_MARKET orders\n",
+    "        if stop_price:\n",
     "            params[\"stopPrice\"] = stop_price\n",
     "\n",
-    "        if order_type == \"LIMIT\" and time_in_force:  # Only add time_in_force for LIMIT orders\n",
+    "        if order_type == \"LIMIT\" and time_in_force:\n",
     "            params[\"timeInForce\"] = time_in_force\n",
     "\n",
-    "        # Check if the order type is either STOP_MARKET or TAKE_PROFIT_MARKET\n",
     "        if order_type in ['STOP_MARKET', 'TAKE_PROFIT_MARKET']:\n",
-    "            # If order type is STOP_MARKET or TAKE_PROFIT_MARKET, the stop price is mandatory\n",
     "            params[\"stopPrice\"] = stop_price\n",
     "\n",
-    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "        # Send the initial order\n",
+    "        response = self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "\n",
+    "        if response is None:\n",
+    "            logging.error(\"Failed to create the initial order.\")\n",
+    "            return None\n",
+    "\n",
+    "        # If the initial order is successful, create TP and SL orders\n",
+    "        if take_profit_percentage or stop_loss_percentage:\n",
+    "            # Get the current mark price to calculate TP and SL prices\n",
+    "            mark_price_response = self.get_mark_price(symbol)\n",
+    "            if mark_price_response is None:\n",
+    "                logging.error(\"Failed to fetch mark price for TP/SL calculation.\")\n",
+    "                return response\n",
+    "\n",
+    "            mark_price = float(mark_price_response['markPrice'])\n",
+    "\n",
+    "            # Calculate TP and SL prices based on the percentage\n",
+    "            if take_profit_percentage:\n",
+    "                take_profit_price = mark_price * (1 + take_profit_percentage / 100) if side == \"BUY\" else mark_price * (1 - take_profit_percentage / 100)\n",
+    "                tp_response = self.create_take_profit_order(symbol, side, take_profit_price)\n",
+    "                if tp_response:\n",
+    "                    logging.info(f\"Take-profit order created: {tp_response}\")\n",
+    "                else:\n",
+    "                    logging.error(\"Failed to create take-profit order.\")\n",
+    "\n",
+    "            if stop_loss_percentage:\n",
+    "                stop_loss_price = mark_price * (1 - stop_loss_percentage / 100) if side == \"BUY\" else mark_price * (1 + stop_loss_percentage / 100)\n",
+    "                sl_response = self.create_stop_loss_order(symbol, side, stop_loss_price)\n",
+    "                if sl_response:\n",
+    "                    logging.info(f\"Stop-loss order created: {sl_response}\")\n",
+    "                else:\n",
+    "                    logging.error(\"Failed to create stop-loss order.\")\n",
+    "\n",
+    "        return response\n",
     "\n",
     "    def close_all_position(self):\n",
     "        \"\"\"Close all active positions on the account\"\"\"\n",
@@ -2816,27 +2911,27 @@
     "                    logging.info(f\"Closed position: {symbol} with quantity {quantity}\")\n",
     "                else:\n",
     "                    logging.error(f\"Failed to close position: {symbol}\")\n",
-    "                    \n",
+    "\n",
     "    def ping(self) -> dict:\n",
     "        \"\"\"Ping the Binance API to check connectivity.\"\"\"\n",
     "        return self._send_request(\"GET\", \"/fapi/v1/ping\")\n",
-    "    \n",
+    "\n",
     "    def get_server_time(self) -> dict:\n",
     "        \"\"\"Get Binance server time to confirm connectivity.\"\"\"\n",
     "        return self._send_request(\"GET\", \"/fapi/v1/time\")\n",
-    "    \n",
+    "\n",
     "    def check_balance(self):\n",
     "        endpoint = \"/fapi/v2/balance\"\n",
     "        params = {\n",
     "            \"timestamp\": int(time.time() * 1000)\n",
     "        }\n",
     "        params[\"signature\"] = self._generate_signature(params)\n",
-    "        return self._send_request(\"GET\", endpoint, params=params)\n"
+    "        return self._send_request(\"GET\", endpoint, params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2850,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2858,7 +2953,7 @@
      "output_type": "stream",
      "text": [
       "Ping Response: {}\n",
-      "Server Time: {'serverTime': 1737690773675}\n"
+      "Server Time: {'serverTime': 1737715876588}\n"
      ]
     }
    ],
@@ -2874,14 +2969,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24472.37230241', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24702.02146931', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '34.46647053', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '7.11888421', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.22658441', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '24809.23247993', 'crossWalletBalance': '24809.23247993', 'crossUnPnl': '0.00000000', 'availableBalance': '24724.25111791', 'maxWithdrawAmount': '24724.25111791', 'marginAvailable': True, 'updateTime': 1737690715954}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24721.75545081', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24579.44284834', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24815.06170386', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '34.33022472', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '6.94978194', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.22490881', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '24864.58350421', 'crossWalletBalance': '24864.58350421', 'crossUnPnl': '0.02351600', 'availableBalance': '24837.39307025', 'maxWithdrawAmount': '24837.39307025', 'marginAvailable': True, 'updateTime': 1737715733580}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '24836.87676220', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
      ]
     }
    ],
@@ -2896,37 +2991,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'symbol': 'SUIUSDT', 'positionSide': 'BOTH', 'positionAmt': '-5.0', 'entryPrice': '4.2246', 'breakEvenPrice': '4.2224877', 'markPrice': '4.22930000', 'unRealizedProfit': '-0.02350000', 'liquidationPrice': '4912.36726234', 'isolatedMargin': '0', 'notional': '-21.14650000', 'marginAsset': 'USDT', 'isolatedWallet': '0', 'initialMargin': '58.87350000', 'maintMargin': '0.21146500', 'positionInitialMargin': '21.14650000', 'openOrderInitialMargin': '37.72700000', 'adl': 1, 'bidNotional': '80.02000000', 'askNotional': '0', 'updateTime': 1737691544783}]\n"
+      "Long Order Response: {'orderId': 17311909844, 'symbol': 'SUIUSDT', 'status': 'NEW', 'clientOrderId': 'ImD2CWosqYmzmcU3BXDWtQ', 'price': '0.000000', 'avgPrice': '0.00', 'origQty': '5.0', 'executedQty': '0.0', 'cumQty': '0.0', 'cumQuote': '0.0000000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'BUY', 'positionSide': 'BOTH', 'stopPrice': '0.000000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1737715884970}\n"
      ]
     }
    ],
    "source": [
-    "gpr = binance_api.get_position_risk(symbol=\"SUIUSDT\")\n",
-    "print(gpr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(hasattr(binance_api, \"set_tp_and_sl\"))"
+    "# Open a long position with TP and SL\n",
+    "long_order_response = binance_api.create_order(\n",
+    "    symbol=\"SUIUSDT\",    # Trading pair\n",
+    "    side=\"BUY\",          # Buy to open a long position\n",
+    "    order_type=\"MARKET\", # Market order for instant execution\n",
+    "    quantity=5,          # Valid quantity in SUI (base asset)\n",
+    "    take_profit_percentage=2,  # 2% take-profit\n",
+    "    stop_loss_percentage=2     # 2% stop-loss\n",
+    ")\n",
+    "print(\"Long Order Response:\", long_order_response)"
    ]
   },
   {
